Bug 433672 - autocompletion for Cyrillic letters does not work.
Summary: autocompletion for Cyrillic letters does not work.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (show other bugs)
Version: 20.12.3
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-26 18:38 UTC by Dmitri Koulikoff
Modified: 2021-03-16 16:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 5.81.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitri Koulikoff 2021-02-26 18:38:02 UTC
SUMMARY

autocompletion for Cyrillic letters does not work.


STEPS TO REPRODUCE
1. Open Configure -> Editing -> Autocompletion
2. Check "Enable auto completion" and save.
3. type "autocompletion автодобавление" and create a new line
4. type "auto" and see the reaction
5. type "авто" and see the reaction


OBSERVED RESULT

On the step 4. there will be a list with "autocompletion" in it to complete
On the step 5. no list is appearing

EXPECTED RESULT

n the step 5. a list with "автодобавление" must appear.


SOFTWARE/OS VERSIONS
Operating System: Slackware-current
KDE Plasma Version: 5.21.1
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Kernel Version: 5.10.18
OS Type: 64-bit
Graphics Platform: X11
Processors: 12 × Intel® Core™ i7-9750H CPU @ 2.60GHz
Memory: 31.1 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630
Comment 1 Christoph Cullmann 2021-03-06 21:21:06 UTC
Hmm, this might be the case because we use in a lot of places QRegularExpression without the QRegularExpression::UseUnicodePropertiesOption option, I think that should be changed.
Comment 2 Christoph Cullmann 2021-03-06 21:29:36 UTC
Git commit 25690c3b747cf9f645d0931732cf38ae1d6c1d7b by Christoph Cullmann.
Committed on 06/03/2021 at 21:29.
Pushed by cullmann into branch 'master'.

fix auto-completion for non ASCII words

we did miss to activate the unicode matching
for classes like \w

I assume more places for other parts needs such
fixes, this fixes the auto-completion

e.g. type

äääääääääääääääääääää

and then try to trigger word auto-completion
by typing

ääääää

nothing did happen before

difference between QRegExp and QRegularExpression
we missed during the porting

M  +2    -2    autotests/src/codecompletiontestmodels.h
M  +1    -0    src/completion/katewordcompletion.cpp
M  +3    -3    src/utils/codecompletionmodelcontrollerinterface.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/25690c3b747cf9f645d0931732cf38ae1d6c1d7b
Comment 3 Christoph Cullmann 2021-03-06 21:30:03 UTC
Thanks for your well done bug report, this was a dumb porting mistake :=)
Comment 4 Dmitri Koulikoff 2021-03-16 16:54:52 UTC
(In reply to Christoph Cullmann from comment #3)
> Thanks for your well done bug report, this was a dumb porting mistake :=)

Please, let me know, when this commit will be released. Version 20.12.3 does not have it working.