fix auto-completion for non ASCII words

we did miss to activate the unicode matching
for classes like \w

I assume more places for other parts needs such
fixes, this fixes the auto-completion

e.g. type

äääääääääääääääääääää

and then try to trigger word auto-completion
by typing

ääääää

nothing did happen before

difference between QRegExp and QRegularExpression
we missed during the porting

BUG: 433672